Fixing some scrollbars on list-groups; Making News full-width.

--- a/src/app/components/ticker-news-add/ticker-news-add.component.css
+++ b/src/app/components/ticker-news-add/ticker-news-add.component.css
@@ -1,6 +1,6 @@
 .list-group{
     max-height: 300px;
     margin-bottom: 10px;
-    overflow:scroll;
-    -webkit-overflow-scrolling: touch;
+    overflow-y: scroll;
+    overflow-wrap: break-word;
 }
